# magentic

./: .env.template  .gitignore  .pre-commit-config.yaml  404.html  CNAME  CONTRIBUTING.md  LICENSE  Makefile  README.md  change_list.txt  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/: dependabot.yml
.github/workflows/: clj-watson.yml  deploy_docs.yml  publish.yml  python-package.yml  test.yml
agentic/: __init__.py  chat.py  function_call.py  openai_chat_model.py  prompt_chain.py  prompt_function.py  py.typed  typing.py
agentic/chat_model/: base.py  openai_chat_model.py
asyncio/: index.html
chat/: index.html
chat-prompting/: index.html
configuration/: index.html
docs/: CNAME  asyncio.md  chat-prompting.md  chat.md  configuration.md  formatting.md  function-calling.md  index.md  logging-and-tracing.md  retrying.md  streaming.md  structured-outputs.md  type-checking.md  usage-with-type-checking.md  vision.md
docs/css/: hide-jupyter-io-labels.css  jupyter-notebook.css
docs/examples/: chain_of_verification.ipynb  rag_github.ipynb  registering_custom_type.ipynb  retrieval_augmented_generation.ipynb  vision_renaming_screenshots.ipynb
examples/chain_of_verification/: chain_of_verification.ipynb  index.html
examples/custom_function_schemas/: register_dataframe_function_schema.ipynb
examples/quiz/: 0_quiz.py  1_quiz_async.py  2_quiz_streamed.py  quiz.py  quiz_async.py
examples/rag_github/: index.html
examples/registering_custom_type/: index.html
examples/retrieval_augmented_generation/: index.html  wikipedia.ipynb
examples/vision_renaming_screenshots/: index.html
formatting/: index.html
function-calling/: index.html
logging-and-tracing/: index.html
magentic/: __init__.py  chat.py  function_call.py  prompt_chain.py  prompt_function.py
magentic/chat_model/: base.py  openai_chat_model.py
retrying/: index.html
search/: search_index.json
src/magentic/: __init__.py  _chat.py  _parsing.py  _pydantic.py  _streamed_response.py  backend.py  chat.py  chatprompt.py  chatprompt_chain.py  formatting.py  function_call.py  logger.py  prompt_chain.py  prompt_function.py  settings.py  streamed_str.py  streaming.py  tracer.py  typing.py  utilities.py  vision.py
src/magentic/chat_model/: anthropic_chat_model.py  base.py  function_schema.py  function_schemas.py  litellm_chat_model.py  message.py  mistral_chat_model.py  openai_chat_model.py  openrouter_chat_model.py  retry_chat_model.py  stream.py
streaming/: index.html
structured-outputs/: index.html
tests/: conftest.py  test_backend.py  test_chat.py  test_chatprompt.py  test_formatting.py  test_function_call.py  test_function_schema.py  test_function_schemas.py  test_issue_49.py  test_new_prompt_chain.py  test_openai_chat_model.py  test_prompt_chain.py  test_prompt_function.py  test_streamed_str.py  test_streaming.py  test_typing.py  test_vision.py
tests/cassettes/test_backend/: test_openai_chat_model_completion.yaml
tests/cassettes/test_chat/: test_chat_asubmit.yaml  test_chat_submit.yaml
tests/cassettes/test_chatprompt/: test_chatprompt_readme_example.yaml  test_chatprompt_with_function_call_and_result.yaml  test_chatprompt_with_image_bytes.yaml
tests/cassettes/test_prompt_chain/: test_async_prompt_chain.yaml  test_async_prompt_chain_messages.yaml  test_prompt_chain.yaml  test_prompt_chain_messages.yaml
tests/cassettes/test_prompt_function/: test_async_decorator_max_retries.yaml  test_async_decorator_return_async_function_call.yaml  test_async_decorator_return_async_streamed_str.yaml  test_async_decorator_return_function_call.yaml  test_async_decorator_return_str.yaml  test_decorator_ignore_multiple_tool_calls.yaml  test_decorator_input_pydantic_model.yaml  test_decorator_max_retries.yaml  test_decorator_return_async_parallel_function_call.yaml  test_decorator_return_bool.yaml  test_decorator_return_bool_str.yaml  test_decorator_return_function_call.yaml  test_decorator_return_parallel_function_call.yaml  test_decorator_return_pydantic_model.yaml  test_decorator_return_str.yaml  test_decorator_return_streamed_str.yaml
tests/cassettes/test_vision/: test_chatprompt_with_user_image_message.yaml  test_chatprompt_with_user_image_message_anthropic.yaml
tests/chat_model/: test_anthropic_chat_model.py  test_litellm_chat_model.py  test_message.py  test_mistral_chat_model.py  test_openai_chat_model.py  test_openai_chat_model_gemini.py  test_openai_chat_model_ollama.py  test_openai_chat_model_xai.py  test_openrouter_chat_model.py  test_retry_chat_model.py
tests/chat_model/cassettes/test_anthropic_chat_model/: test_anthropic_chat_model_acomplete[List three fruits-output_types3-list].yaml  test_anthropic_chat_model_acomplete[Return True-output_types1-bool].yaml  test_anthropic_chat_model_acomplete[Return the numbers 1 to 5-output_types2-list].yaml  test_anthropic_chat_model_acomplete[Say hello!-output_types0-str].yaml  test_anthropic_chat_model_acomplete_async_parallel_function_call.yaml  test_anthropic_chat_model_acomplete_async_streamed_response.yaml  test_anthropic_chat_model_acomplete_function_call.yaml  test_anthropic_chat_model_acomplete_raises_tool_schema_parse_error.yaml  test_anthropic_chat_model_acomplete_usage.yaml  test_anthropic_chat_model_acomplete_usage_structured_output.yaml  test_anthropic_chat_model_complete[List three fruits-output_types3-list].yaml  test_anthropic_chat_model_complete[Return True-output_types1-bool].yaml  test_anthropic_chat_model_complete[Return the numbers 1 to 5-output_types2-list].yaml  test_anthropic_chat_model_complete[Say hello!-output_types0-str].yaml  test_anthropic_chat_model_complete_document_bytes.yaml  test_anthropic_chat_model_complete_function_call.yaml  test_anthropic_chat_model_complete_image_bytes.yaml  test_anthropic_chat_model_complete_no_structured_output_error.yaml  test_anthropic_chat_model_complete_parallel_function_call.yaml  test_anthropic_chat_model_complete_raises_tool_schema_parse_error.yaml  test_anthropic_chat_model_complete_streamed_response.yaml  (+2 more)
type-checking/: index.html
vision/: index.html
(+110 files in other folders)
